Create basic structure for webpack to run

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
       <title>Shipping</title>
     </head>
     <body>
-      <div id="shipping"></div>
+      <div id='shipping'></div>
+      <script src ='../dist/ttreit-shipping.js'></script>
     </body>
 </html>
