--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
       <div id='shipping'></div>
-      <script src ='../dist/ttreit-shipping.js'></script>
+      <script src ='./dist/ttreit-shipping.js'></script>
     </body>
 </html>
