--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
       <div id='shipping'></div>
-      <script src ='./dist/ttreit-shipping.js'></script>
+      <script src ='./dist/sdc-vectrex-chris-shipping.js'></script>
     </body>
 </html>
